[tool.poetry]
name = "python-camunda-sdk"
version = "0.1.0"
description = ""
authors = ["Mihails Delmans <m.delmans@gmail.com>"]
readme = "README.md"
packages = [
	{include = "python_camunda_sdk"},
	{include = "examples"}
]

[tool.poetry.dependencies]
python = "^3.11"
pyzeebe = "^3.0.4"
pydantic = "^1.10.7"
loguru = "^0.7.0"
click = "^8.1.3"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
generate_template = 'examples:generate_template'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
