[tool.poetry]
name = "python-camunda-sdk"
version = "1.0.0"
description = "Python Camunda SKD"
authors = ["Mihails Delmans <m.delmans@gmail.com>"]
readme = "README.md"
packages = [
	{include = "python_camunda_sdk"}
]

[tool.poetry.dependencies]
python = "^3.11"
pyzeebe = "^3.0.4"
pydantic = "^1.10.7"
loguru = "^0.7.0"
click = "^8.1.3"

[tool.poetry.scripts]
generate_template = 'python_camunda_sdk.templates:cli'

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
mkdocs-material = "^9.1.18"
mkdocstrings-python = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
