[tool.poetry]
name = "python-camunda-sdk"
version = "1.0.1"
description = "Python Camunda SDK"
license = "MIT"
authors = ["Mihails Delmans <m.delmans@gmail.com>"]
readme = "README.md"
homepage = "https://mdelmans.github.io/python-camunda-sdk/"
repository = "https://github.com/mdelmans/python-camunda-sdk"
documentation = "https://mdelmans.github.io/python-camunda-sdk/"
keywords = ["python", "camunda", "sdk"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Framework :: Pydantic",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English"
]
packages = [
	{include = "python_camunda_sdk"}
]

[tool.poetry.dependencies]
python = "^3.9"
pyzeebe = "^3.0.4"
pydantic = "^2.1.0"
loguru = "^0.7.0"
click = "^8.1.3"

[tool.poetry.scripts]
generate_template = 'python_camunda_sdk.templates:cli'

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
mkdocs-material = "^9.1.18"
mkdocstrings-python = "^1.2.1"
black = "^23.7.0"
pillow = "^10.0.0"
cairosvg = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
